# aiogram_template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.example.toml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: dev.yml  lint.yml  main.yml  tests.yml  typecheck.yml
docs/en/: README.md
docs/ru/: README.md
src/: __main__.py  main.py
src/bot/handlers/: __init__.py  example.py
src/bot/keyboards/: example.py
src/bot/states/: example.py
src/bot/texts/: example.py
src/core/cache/: __init__.py  redis.py
src/core/config/: __init__.py  config.py
src/core/db/: __init__.py  connection.py  soft_delete.py
src/core/exc/: base.py  handlers.py
src/core/middlewares/: logging.py  user.py
src/core/storages/: __init__.py  s3.py
src/di/: container.py  scopes.py
src/di/providers/: core.py  repos.py  services.py
src/models/: base.py  user.py
src/models/mixins/: __init__.py  mixins.py
src/repos/redis/: example.py  interfaces.py
src/repos/s3/: example.py  interfaces.py
src/repos/sql/: example.py  interfaces.py
src/schemas/dataclasses/: __init__.py  common.py  model_info.py
src/schemas/enums/: __init__.py  common.py
src/schemas/pydantic/: __init__.py  common.py
src/schemas/types/: __init__.py  common.py
src/services/: example.py
src/services/logger/: logger.py
src/utils/: local_time.py  mappers.py
tools/: get_markers.py  mark_tests.py
