[project]
name = "aiogram-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "илья кинке", email = "ilya@qu1nqqy.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.1.1",
    "aiogram>=3.24.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "greenlet>=3.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.13.1",
    "pytest==8.4.2",
    "pre-commit==4.3.0",
]

# -------------------- Ruff --------------------
[tool.ruff]
line-length = 79
target-version = "py312"
src = [
    "src",
    "tests/helpers",
]
exclude = [
    "tests/helpers/mocks/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W505", "COM812", "F401", "B", "C4", "ARG", "UP", "SIM", "ANN", "Q", "PLR"]
# Игнорируем предупреждения/ошибки по отступам (комментарии и смешанные табы/пробелы)
ignore = [
    "E501", # Line too long
    "E101", # Indentation contains mixed spaces and tabs
    "E114", # Indentation is not a multiple of four
    "E115", # Expected an indented block
    "E116", # Unexpected indentation
    "B904", # raise from err
    "PLR0913", # Too many arguments in function definition
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value in comparasion
    "SIM117", # Single `with` stmt with multiple contexts
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
    "UP040", # Type checking `typing.TypeAlias` (introduced in Python 3.10)
    "UP031", # C style formatting
]

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = false
indent-style = "tab"

# -------------------- Alembic --------------------
[tool.alembic]
script_location = "migrations"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = "."
version_path_separator = "os"

# ------------- uv: параллельные операции -------------
[tool.uv]
concurrent-downloads = 12         # одновременных HTTP-запросов (по умолчанию 50)
#concurrent-installs  = 6          # распаковка/копирование колёс (по умолчанию зависит от количества ядер процессора)
#concurrent-builds    = 4          # сборка sdist-пакетов из исходников (по умолчанию зависит от количества ядер процессора)
# ------------------------------------------------------

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "faker==37.12.0",
    "hatchling==1.27.0",
    "httpx==0.28.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

# -------------------- Pytest --------------------

[tool.pytest.ini_options]
addopts = "-ra -q --disable-warnings"
testpaths = ["tests"]

markers = [
    "unit: fast, pure logic tests",
    "integration: DB, repository or service tests",
    "api: HTTP endpoint tests",
    "contracts: schema and enum compatibility tests",
    "migrations: alembic upgrade/downgrade checks",
    "perf: performance / benchmark tests",
]

anyio_backend = "asyncio"

# -------------------- ty --------------------

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [
    "tests/**",
    "migrations/**",
]

[[tool.ty.overrides]]
include = ["src/core/models/**"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"

[tool.ty.rules]
redundant-cast = "warn"
too-many-positional-arguments = "ignore"
unused-ignore-comment = "warn"
possibly-missing-attribute = "ignore"
unresolved-import = "ignore"
